--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="icon" type="image/png" th:href="@{/favicon.ico}"/>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <div th:replace="~{navigation :: navi(Home)}"></div>
+    <h1>Greetings in MY product shop</h1>
+    <h2>Most popular products</h2>
+    <div th:each="pr : ${mostSeen}" style="border-radius: 5pt; border: 3px solid gray; margin: 10pt 75% 5pt 10pt;">
+        <span th:text="${pr.title}"></span><br>
+        <span th:text="${ 'ID: ' + pr.id}"></span><br>
+        <span th:text="${ 'Цена: ' + pr.price}"></span>
+    </div>
 </body>
 </html>
