--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -24,23 +24,28 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item" th:classappend="${activeTab == 'Home' ? 'active' : ''}">
-                    <a class="nav-link" th:href="@{/}">Главная страница<span
-                            class="sr-only">(current)</span></a>
-                </li>
+<!--                <li class="nav-item" th:classappend="${activeTab == 'Home' ? 'active' : ''}">-->
+<!--                    <a class="nav-link" th:href="@{/}">Главная страница<span-->
+<!--                            class="sr-only">(current)</span></a>-->
+<!--                </li>-->
                 <li class="nav-item" th:classappend="${activeTab == 'Shop' ? 'active' : ''}">
-                    <a class="nav-link" th:href="@{/shop}">Каталог товаров<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" th:href="@{/products}">Каталог товаров<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item" th:classappend="${activeTab == 'Info' ? 'active' : ''}">
-                    <a class="nav-link" th:href="@{/info}">Информация<span class="sr-only">(current)</span></a>
-                </li>
-                <li sec:authorize="hasRole('ADMIN')" class="nav-item"
-                    th:classappend="${activeTab == 'Products' ? 'active' : ''}">
-                    <a class="nav-link" th:href="@{/product/edit/0}">Добавить товар</a>
-                </li>
-                <li class="nav-item"
-                    th:classappend="${activeTab == 'Cart' ? 'active' : ''}">
-                    <a class="nav-link" th:href="@{/shop/cart}">Корзина</a>
+<!--                <li class="nav-item" th:classappend="${activeTab == 'Info' ? 'active' : ''}">-->
+<!--                    <a class="nav-link" th:href="@{/info}">Информация<span class="sr-only">(current)</span></a>-->
+<!--                </li>-->
+<!--                <li sec:authorize="hasRole('ADMIN')" class="nav-item"-->
+<!--                    th:classappend="${activeTab == 'Products' ? 'active' : ''}">-->
+<!--                    <a class="nav-link" th:href="@{/product/add}">Добавить товар</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item"-->
+<!--                    th:classappend="${activeTab == 'Cart' ? 'active' : ''}">-->
+<!--                    <a class="nav-link" th:href="@{/shop/cart}">Корзина</a>-->
+<!--                </li>-->
+                <li class="nav-item">
+                    <div sec:authorize="isAuthenticated()">
+                        <div class="nav-link mr-3" sec:authentication="principal.username"></div>
+                    </div>
                 </li>
                 <li sec:authorize="isAuthenticated()" class="nav-item">
                     <form th:action="@{/logout}" method="POST">
