--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8"/>
     <title>Каталог товаров</title>
@@ -9,6 +10,7 @@
 </head>
 
 <body>
+<div th:replace="~{navigation :: navi(Home)}"></div>
 <div class="container">
     <h1 >Фильтр</h1>
     <div th:if="${showFilter}">
@@ -58,8 +60,8 @@
             <td th:text="${product.price}"/>
             <td>
                 <a th:href="@{'/products/show/' + ${product.id}}" th:text="Просмотреть"/>
-                <a th:href="@{'/products/drop/' + ${product.id}}" th:text="Удалить"></a>
-                <a th:href="@{'/products/edit/' + ${product.id}}" th:text="Изменить"></a>
+                <a sec:authorize="hasRole('ADMIN')" th:href="@{'/products/drop/' + ${product.id}}" th:text="Удалить"></a>
+                <a sec:authorize="hasRole('ADMIN')" th:href="@{'/products/edit/' + ${product.id}}" th:text="Изменить"></a>
             </td>
             </div>
             <div th:if="${isRedact.contains(product.id)}">
@@ -76,38 +78,42 @@
         </tr>
         </tbody>
     </table>
+
     <div th:each="p : ${pages}">
         <a th:text="${p + 1}" th:href="@{'/products/page/' + ${p}}"/>
     </div>
-    <h1 >Добавить строку</h1>
+    <a th:href="@{/products/add}">
+        <button>Добавить</button>
+    </a>
+<!--    <div sec:authorize="hasRole('ADMIN')">-->
+<!--    <h1 >Добавить строку</h1>-->
     <span th:text="${'Всего товаров ' + products.size()}"/>
     <br>
-    <form th:action="@{/products/add}"
-          th:object="${product}" method="post" class="form-horizontal">
 
-        <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input th:field="*{id}" placeholder="id" class="form-control" pattern="\d*" required/>
-        </div>
+<!--    <form th:action="@{/products/add}"-->
+<!--          th:object="${product}" method="post" class="form-horizontal">-->
+<!--        <div style="margin-bottom: 25px" class="input-group">-->
+<!--            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>-->
+<!--            <input th:field="*{id}" placeholder="id" class="form-control" pattern="\d*" required/>-->
+<!--        </div>-->
 
-        <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input th:field="*{title}" placeholder="title (*)" class="form-control" required/>
-        </div>
+<!--        <div style="margin-bottom: 25px" class="input-group">-->
+<!--            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>-->
+<!--            <input th:field="*{title}" placeholder="title (*)" class="form-control" required/>-->
+<!--        </div>-->
 
-        <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input th:field="*{price}" placeholder="price" class="form-control" pattern="\d*" required/>
-        </div>
+<!--        <div style="margin-bottom: 25px" class="input-group">-->
+<!--            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>-->
+<!--            <input th:field="*{price}" placeholder="price" class="form-control" pattern="\d*" required/>-->
+<!--        </div>-->
 
-        <div style="margin-top: 10px" class="form-group">
-            <div class="col-sm-6 controls">
-                <button type="submit" class="btn btn-primary">Add</button>
-            </div>
-        </div>
-        <label th:text="${addMess.value}"></label>
-    </form>
+<!--        <div style="margin-top: 10px" class="form-group">-->
+<!--            <div class="col-sm-6 controls">-->
+<!--                <button type="submit" class="btn btn-primary">Add</button>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <label th:text="${addMess.value}"></label>-->
+<!--    </form></div>-->
 </div>
-
 </body>
 </html>
